--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -33,7 +33,48 @@
 
 	<link rel="icon" href="assets/logo.svg" />
 
-	<!-- Custom styles -->
+
+	<!-- font-awesome import -->
+	<link rel="stylesheet" href="lib/fontawesome/fontawesome.css" />
+
+	<!-- leaflet import -->
+	<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
+	<link rel="stylesheet" href="lib/leaflet/leaflet.css" />
+
+	<!-- leaflet.coordinates import -->
+	<script type="text/javascript" src="lib/leaflet.coordinates/leaflet.coordinates.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.css" />
+	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.ie.css" />
+
+	<!-- leaflet.fullscreen import -->
+	<script type="text/javascript" src="lib/leaflet.fullscreen/leaflet.fullscreen.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.fullscreen/leaflet.fullscreen.css" />
+
+	<!-- leaflet.locatecontrol import -->
+	<script type="text/javascript" src="lib/leaflet.locatecontrol/leaflet.locatecontrol.min.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.locatecontrol/leaflet.locatecontrol.min.css" />
+
+	<!-- leaflet.geocoder import -->
+	<script type="text/javascript" src="lib/leaflet.geocoder/leaflet.geocoder.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.geocoder/leaflet.geocoder.css" />
+
+	<!-- leaflet.graticule import -->
+	<script type="text/javascript" src="lib/leaflet.graticule/leaflet.graticule.js"></script>
+
+	<!-- leaflet.easyprint import -->
+	<script type="text/javascript" src="lib/leaflet.easyprint/leaflet.easyprint.js"></script>
+
+	<!-- leaflet.markercluster import -->
+	<script type="text/javascript" src="lib/leaflet.markercluster/leaflet.markercluster.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.css" />
+	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.default.css" />
+
+	<!-- leaflet.draw import -->
+	<script type="text/javascript" src="lib/leaflet.draw/leaflet.draw.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.draw/leaflet.draw.css" />
+
+
+	<!-- custom styles -->
   <link rel="stylesheet" href="css/main.css" />
 
 	<style type="text/css">
@@ -43,7 +84,19 @@
 </head>
 <body>
 
-  <p>.</p>
+  <div id="map"></div>
+
+	<script type="text/javascript" src="lib/jquery/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="lib/feather/feather.min.js"></script>
+
+	<script type="text/javascript" src="js/helper/uuid.js"></script>
+
+	<script type="text/javascript" src="js/map/layer/polyline.js"></script>
+	<script type="text/javascript" src="js/map/layer/polygon.js"></script>
+	<script type="text/javascript" src="js/map/layer/rectangle.js"></script>
+	<script type="text/javascript" src="js/map/main.js"></script>
+
+	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
