New plugin (stable)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 	<script type="text/javascript" src="lib/leaflet.geocoder/leaflet.geocoder.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.geocoder/leaflet.geocoder.css" />
 
+	<!-- leaflet.reachability import -->
+	<script type="text/javascript" src="lib/leaflet.reachability/leaflet.reachability.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.reachability/leaflet.reachability.css" />
+
 	<!-- leaflet.graticule import -->
 	<script type="text/javascript" src="lib/leaflet.graticule/leaflet.graticule.js"></script>
 
