--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
   <meta name="description" content="User-friendly mapping" />
 	<meta name="author" content="Napkin AS" />
+	<meta name="copyright" content="Copyright(c) Napkin AS.  All rights reserved." />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
+  <link rel="manifest" href="assets/favicons/site.webmanifest" />
+  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
 
 	<title>Napkin – User-friendly mapping</title>
 
