--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 	<div id="streetviewContainer">
 		<i class="fas fa-angle-left" id="back"></i>
 		<div id="streetview"></div>
+		<div id="not_found">
+			<p>No result found</p>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="lib/jquery/jquery-3.5.1.min.js"></script>
