Restructure and added routing plugin

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.css" />
 	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.ie.css" />
 
+	<!-- leaflet.graticule import -->
+	<script type="text/javascript" src="lib/leaflet.graticule/leaflet.graticule.js"></script>
+
+	<!-- leaflet.easyprint import -->
+	<script type="text/javascript" src="lib/leaflet.easyprint/leaflet.easyprint.js"></script>
+
 	<!-- leaflet.locatecontrol import -->
 	<script type="text/javascript" src="lib/leaflet.locatecontrol/leaflet.locatecontrol.min.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.locatecontrol/leaflet.locatecontrol.min.css" />
@@ -68,11 +74,12 @@
 	<script type="text/javascript" src="lib/leaflet.geocoder/leaflet.geocoder.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.geocoder/leaflet.geocoder.css" />
 
-	<!-- leaflet.graticule import -->
-	<script type="text/javascript" src="lib/leaflet.graticule/leaflet.graticule.js"></script>
+	<!-- leaflet.control.geocoder import -->
+	<script type="text/javascript" src="lib/leaflet.control.geocoder/leaflet.control.geocoder.js"></script>
 
-	<!-- leaflet.easyprint import -->
-	<script type="text/javascript" src="lib/leaflet.easyprint/leaflet.easyprint.js"></script>
+	<!-- leaflet.routing.machine import -->
+	<script type="text/javascript" src="lib/leaflet.routing.machine/leaflet.routing.machine.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.routing.machine/leaflet.routing.machine.css" />
 
 	<!-- leaflet.markercluster import -->
 	<script type="text/javascript" src="lib/leaflet.markercluster/leaflet.markercluster.js"></script>
