--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
-  <meta name="description" content="User-friendly mapping" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
+	<meta name="description" content="User-friendly mapping" />
 	<meta name="author" content="Napkin AS" />
-	<meta name="copyright" content="Copyright(c) Napkin AS.  All rights reserved." />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="copyright" content="Copyright(c) Napkin AS.	All rights reserved." />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
-  <link rel="manifest" href="assets/favicons/site.webmanifest" />
-  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#ffffff" />
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
+	<link rel="manifest" href="assets/favicons/site.webmanifest" />
+	<link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
+	<meta name="msapplication-TileColor" content="#da532c" />
+	<meta name="theme-color" content="#ffffff" />
 
 	<title>Napkin – User-friendly mapping</title>
 
@@ -51,6 +51,10 @@
 	<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
 	<link rel="stylesheet" href="lib/leaflet/leaflet.css" />
 
+	<!-- leaflet.routing.machine import -->
+	<script type="text/javascript" src="lib/leaflet.routing.machine/leaflet.routing.machine.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.routing.machine/leaflet.routing.machine.css" />
+
 	<!-- leaflet.easybutton import -->
 	<script type="text/javascript" src="lib/leaflet.easybutton/leaflet.easybutton.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.easybutton/leaflet.easybutton.css" />
@@ -59,12 +63,6 @@
 	<script type="text/javascript" src="lib/leaflet.coordinates/leaflet.coordinates.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.css" />
 	<link rel="stylesheet" href="lib/leaflet.coordinates/leaflet.coordinates.ie.css" />
-
-	<!-- leaflet.graticule import -->
-	<script type="text/javascript" src="lib/leaflet.graticule/leaflet.graticule.js"></script>
-
-	<!-- leaflet.easyprint import -->
-	<script type="text/javascript" src="lib/leaflet.easyprint/leaflet.easyprint.js"></script>
 
 	<!-- leaflet.locatecontrol import -->
 	<script type="text/javascript" src="lib/leaflet.locatecontrol/leaflet.locatecontrol.min.js"></script>
@@ -77,26 +75,15 @@
 	<!-- leaflet.control.geocoder import -->
 	<script type="text/javascript" src="lib/leaflet.control.geocoder/leaflet.control.geocoder.js"></script>
 
-	<!-- leaflet.routing.machine import -->
-	<script type="text/javascript" src="lib/leaflet.routing.machine/leaflet.routing.machine.js"></script>
-	<link rel="stylesheet" href="lib/leaflet.routing.machine/leaflet.routing.machine.css" />
-
 	<!-- leaflet.markercluster import -->
 	<script type="text/javascript" src="lib/leaflet.markercluster/leaflet.markercluster.js"></script>
 	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.css" />
 	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.default.css" />
 
-	<!-- leaflet.draw import -->
-	<script type="text/javascript" src="lib/leaflet.draw/leaflet.draw.js"></script>
-	<link rel="stylesheet" href="lib/leaflet.draw/leaflet.draw.css" />
-
 
 	<!-- google maps import -->
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOhUleCCqG94Kujoff1yFCWbpDj1of4PI&callback=initMap&libraries=&v=weekly"
-		defer
-	></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOhUleCCqG94Kujoff1yFCWbpDj1of4PI&callback=initMap&libraries=&v=weekly" defer></script>
 	<script type="text/javascript">
 		"use strict";
 
@@ -105,7 +92,7 @@
 
 
 	<!-- custom styles -->
-  <link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/main.css" />
 
 	<style type="text/css">
 		/**/
@@ -114,7 +101,7 @@
 </head>
 <body>
 
-  <div id="map"></div>
+	<div id="map"></div>
 
 	<div id="streetviewContainer">
 		<i class="fas fa-angle-left" id="back"></i>
@@ -127,13 +114,8 @@
 	<script type="text/javascript" src="lib/jquery/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="lib/feather/feather.min.js"></script>
 
-	<script type="text/javascript" src="js/helper/uuid.js"></script>
-
-	<script type="text/javascript" src="js/map/layer/polyline.js"></script>
-	<script type="text/javascript" src="js/map/layer/polygon.js"></script>
-	<script type="text/javascript" src="js/map/layer/rectangle.js"></script>
-	<script type="text/javascript" src="js/map/main.js"></script>
-
+	<script type="text/javascript" src="js/uuid.js"></script>
+	<script type="text/javascript" src="js/map.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
