--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
 	<link rel="icon" href="assets/logo.svg" />
 
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script>
+		window.ga = window.ga || function() { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+
+		ga("create", "257616379", "auto");
+		ga("send", "pageview");
+	</script>
+	<script async src="https://www.google-analytics.com/analytics.js"></script>
+	<!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-159004840-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'UA-159004840-1');
+	</script-->
+
+
 	<!-- font-awesome import -->
 	<link rel="stylesheet" href="lib/fontawesome/fontawesome.css" />
 
