--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.css" />
 	<link rel="stylesheet" href="lib/leaflet.markercluster/leaflet.markercluster.default.css" />
 
+	<!-- leaflet.draw import -->
+	<!--script type="text/javascript" src="lib/leaflet.draw/leaflet.draw.js"></script>
+	<link rel="stylesheet" href="lib/leaflet.draw/leaflet.draw.css" /-->
+
 
 	<!-- google maps import -->
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
